--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -181,14 +181,18 @@
 
         <!-- 의사 소견 -->
         <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="2" Grid.Row="1">
-            <TextBlock Name="TxtDocTalkShow" Width="190" Height="400" Margin="1,0" 
-                       VerticalAlignment="Top">
-            </TextBlock>
-            <TextBlock Name="TxtDocTalk" Width="190" Height="120" Margin="-190,0" 
-                       VerticalAlignment="Bottom"
-                       HorizontalAlignment="Left"
-                       >
-            </TextBlock>
+            <TextBox Name="TxtDocTalkShow" Width="190" Height="400" Margin="1,0" 
+                       VerticalAlignment="Top"
+                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+            </TextBox>
+            <TextBox Name="TxtDocTalk" Width="190" Height="120" Margin="-190,0" 
+                    VerticalAlignment="Bottom"
+                    HorizontalAlignment="Left"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    >
+            </TextBox>
         </DockPanel>
 
         <!-- 소견저장 버튼 -->
