--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -1,13 +1,13 @@
 ﻿<Window x:Class="XrayTEXT.MainWin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ViewModels="clr-namespace:XrayTEXT.ViewModels"
+    xmlns:ViewModels="clr-namespace:XrayTEXT.ViewModels"
+    xmlns:er="clr-namespace:XrayTEXT" 
     Title="Image Annotation Demo" Width="1200" Height="650"
     FontSize="14"  WindowStartupLocation="CenterScreen"
-        WindowState="Maximized" 
-        Loaded="OnLoaded"
-        xmlns:er="clr-namespace:XrayTEXT" 
-        DataContext="{Binding ElementName = CodeBehind}"
+    WindowState="Maximized" 
+    Loaded="OnLoaded"
+    DataContext="{Binding ElementName = CodeBehind}"
     >
     <!--WindowStyle="ToolWindow" ResizeMode="NoResize"-->
     <Window.Resources>
@@ -221,7 +221,14 @@
           Margin="130,0,0,0"
           >소견로드
         </Button>
-
+        <!-- 소견DB저장 버튼 -->
+        <Button Name="btnSaveDBText"
+          Grid.Row="2" Grid.Column="1"
+          Click="OnSaveDBButtonClick"
+          HorizontalAlignment="Left"
+          Margin="195,0,0,0"
+          >소견DB저장
+        </Button>
 
         <!-- 이미지경로 -->
         <TextBox Name="ImagesDir" Margin="0,0.333,120.333,-0.333" Width="290" Grid.Row="2" Grid.Column="1" Text="D:\DEV\WPF\PRJ\XrayTEXT\XrayTEXT\Images"  HorizontalAlignment="Right" />
