--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -181,12 +181,14 @@
 
         <!-- 의사 소견 -->
         <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="2" Grid.Row="1">
-            <TextBox Name="TxtDocTalkShow" Width="190" Height="400" Margin="1,0" 
+            <!-- 컷팅 메모 -->
+            <TextBox Name="TxtcutMemo" Width="190" Height="400" Margin="1,0" 
                        VerticalAlignment="Top"
                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             </TextBox>
-            <TextBox Name="TxtDocTalk" Width="190" Height="120" Margin="-190,0" 
+            <!-- 사진 파일 설명 -->
+            <TextBox Name="TxtFileTitle" Width="190" Height="120" Margin="-190,0" 
                     VerticalAlignment="Bottom"
                     HorizontalAlignment="Left"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
