--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -182,11 +182,13 @@
         <!-- 의사 소견 -->
         <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="2" Grid.Row="1">
             <!-- 컷팅 메모 -->
-            <TextBox Name="TxtcutMemo" Width="190" Height="400" Margin="1,0" 
+            <TextBox Name="TxtcutMemo" Width="190" MinHeight="400" Margin="1,0" 
                        VerticalAlignment="Top"
                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                     >
             </TextBox>
+            <!--Text="{Binding UserCutMemo, UpdateSourceTrigger=PropertyChanged}"-->
             <!-- 사진 파일 설명 -->
             <TextBox Name="TxtFileTitle" Width="190" Height="120" Margin="-190,0" 
                     VerticalAlignment="Bottom"
@@ -195,6 +197,7 @@
                     ScrollViewer.VerticalScrollBarVisibility="Auto"
                     >
             </TextBox>
+            <!--Text="{Binding UserFileMemo, UpdateSourceTrigger=PropertyChanged}"-->
         </DockPanel>
 
         <!-- 소견저장 버튼 -->
@@ -230,6 +233,14 @@
           HorizontalAlignment="Left"
           Margin="195,0,0,0"
           >소견DB저장
+        </Button>
+
+        <Button Name="btnUpText"
+          Grid.Row="2" Grid.Column="1"
+          Click="UpTextSetBind"
+          HorizontalAlignment="Left"
+          Margin="285,0,0,0"
+          >우측소견로드
         </Button>
 
         <!-- 이미지경로 -->
