--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="XrayTEXT.MainWin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ViewModels="clr-namespace:XrayTEXT.ViewModels"
     xmlns:er="clr-namespace:XrayTEXT" 
     Title="Xray Marker" Width="1200" Height="650"
     FontSize="14"  WindowStartupLocation="CenterScreen"
@@ -163,7 +162,7 @@
                       x:Name="ImageViewer">
                         <Grid x:Name="root" Background="White">
                             <Canvas Name="Xcanvas" Width="1500" Height="960">
-                                <Image Name="ViewedPhoto" Width="1500" Height="960" Margin="1" Stretch="UniformToFill" 
+                                <Image Name="ViewedPhoto" Width="1223" Height="1005" Margin="1" Stretch="UniformToFill" 
                                        
 >                                    <Image.RenderTransform>
                                         <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
@@ -186,9 +185,9 @@
                        VerticalAlignment="Top"
                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto"
-                     >
+                     Text="{Binding UserCutMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             </TextBox>
-            <!--Text="{Binding UserCutMemo, UpdateSourceTrigger=PropertyChanged}"-->
+            <!---->
             <!-- 사진 파일 설명 -->
             <TextBox Name="TxtFileTitle" Width="190" Height="120" Margin="-190,0" 
                     VerticalAlignment="Bottom"
@@ -240,7 +239,7 @@
           Click="UpTextSetBind"
           HorizontalAlignment="Left"
           Margin="285,0,0,0"
-          >우측소견로드
+          >txt저장후소견로드
         </Button>
 
         <!-- 이미지경로 -->
