--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -2,13 +2,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:er="clr-namespace:XrayTEXT" 
+    xmlns:MyNamespace="clr-namespace:XrayTEXT.ViewModels"
     Title="Xray Marker" Width="1200" Height="650"
     FontSize="14"  WindowStartupLocation="CenterScreen"
     WindowState="Maximized" 
     Loaded="OnLoaded"
-    DataContext="{Binding ElementName = CodeBehind}"
     >
-    <!--WindowStyle="ToolWindow" ResizeMode="NoResize"-->
+    <!--WindowStyle="ToolWindow" ResizeMode="NoResize"
+    DataContext="{Binding ElementName = CodeBehind}"
+    -->
     <Window.Resources>
 
         <!-- cssTalkBox -->
@@ -59,7 +61,7 @@
                         <Image Source="{Binding Image.Thumbnail}"/>
                         <Label Content="{Binding Metadata.DateImageTaken}">
                             <Label.ToolTip>
-                                Only JPeg images with a stored thumbnail will display a thumbnail during preview.
+                                JPeg , Png 이미지만 미리보기가 가능합니다.
                             </Label.ToolTip>
                         </Label>
                     </StackPanel>
@@ -105,7 +107,7 @@
         <ObjectDataProvider x:Key="Photos" ObjectType="{x:Type er:PhotoCollection}" />
     </Window.Resources>
 
-    <Grid Margin="1" DataContext="{Binding Source={StaticResource Photos}}">
+    <Grid Margin="1" >
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
             <RowDefinition Height="*" />
@@ -120,7 +122,7 @@
         <!--썸네일-->
         <GroupBox Grid.Column="0" Grid.Row="1" Width="200" >
             <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Width="200">
-                <ListBox 
+                <ListBox DataContext="{Binding Source={StaticResource Photos}}"
                     IsSynchronizedWithCurrentItem="True"
                     Name="PhotosListBox" 
                     Style="{StaticResource PhotoListBoxStyle}" 
@@ -181,15 +183,19 @@
         <!-- 의사 소견 -->
         <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="2" Grid.Row="1">
             <!-- 컷팅 메모 -->
-            <TextBox Name="TxtcutMemo" Width="190" MinHeight="400" Margin="1,0" 
-                       VerticalAlignment="Top"
+            <TextBox Name="TxtcutMemo" x:FieldModifier="public"
+                     Text="{Binding MainViewModel.UserCutMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                     Width="190" MinHeight="400" Margin="1,0" 
+                     VerticalAlignment="Top"
                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto"
-                     Text="{Binding UserCutMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                     ScrollViewer.VerticalScrollBarVisibility="Auto"
+                     >
             </TextBox>
             <!---->
             <!-- 사진 파일 설명 -->
-            <TextBox Name="TxtFileTitle" Width="190" Height="120" Margin="-190,0" 
+            <TextBox Name="TxtFileTitle" x:FieldModifier="public"
+                    Text="{Binding MainViewModel.UserFileMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Width="190" Height="120" Margin="-190,0" 
                     VerticalAlignment="Bottom"
                     HorizontalAlignment="Left"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
