--- a/XrayTEXT/XrayTextBox.xaml
+++ b/XrayTEXT/XrayTextBox.xaml
@@ -4,6 +4,7 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:local="clr-namespace:XrayTEXT"
   x:Name="mainControl"
+  x:FieldModifier="public"
   >
   <ContentControl.Resources>
     <!-- edit annotation. -->
