버튼 이벤트 타임아웃 추가

--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -129,7 +129,7 @@
                     SelectionMode="Extended" 
                     ItemsSource="{Binding}" 
                     SelectedIndex="0" 
-                    MouseDoubleClick="OnPhotoClick" Width="180" >
+                    MouseDoubleClick="OnPhotoDblClick" Width="180" >
                     <ListBox.ContextMenu>
                         <ContextMenu>
                             <MenuItem Header="삭제" Click="deletePhoto"/>
