--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -7,6 +7,7 @@
     FontSize="14"  WindowStartupLocation="CenterScreen"
     WindowState="Maximized" 
     Loaded="OnLoaded"
+        Icon="x-ray.ico"
     >
     <!--WindowStyle="ToolWindow" ResizeMode="NoResize"
     DataContext="{Binding ElementName = CodeBehind}"
