--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -204,24 +204,22 @@
             <!--X-ray-->
             <TabControl x:Name="tabControl" Grid.Row="1" Grid.Column="1">
                 <TabItem Header="X-Ray">
-                    <Border BorderBrush="Black" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-
+                    <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <ScrollViewer Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
-                            ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                            x:Name="ImageViewer">
-                                <Grid x:Name="root" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <Canvas Name="Xcanvas" Width="1500" Height="960" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                                        <Image Name="ViewedPhoto" Width="1223" Height="1005" Margin="1" Stretch="UniformToFill"  HorizontalAlignment="Center" VerticalAlignment="Center">
-                                            <Image.RenderTransform>
-                                                <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
-                                                </ScaleTransform>
-                                            </Image.RenderTransform>
-                                        </Image>
-                                    </Canvas>
+                        ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                        x:Name="ImageViewer">
+                            <Grid x:Name="root" Background="White" >
+                                <Canvas Name="Xcanvas" Width="1500" Height="960"  >
+                                    <Image Name="ViewedPhoto" Width="1223" Height="1005" Margin="1" Stretch="UniformToFill"  >
+                                        <Image.RenderTransform>
+                                            <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
+                                            </ScaleTransform>
+                                        </Image.RenderTransform>
+                                    </Image>
+                                </Canvas>
                                 <!--<TextBlock x:Name="tbPosition" Text="마우스 좌표 : [0.0]" Margin="10" />-->
                             </Grid>
                         </ScrollViewer>
-
                     </Border>
                 </TabItem>
             </TabControl>
