--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -204,7 +204,7 @@
             <!--X-ray-->
             <TabControl x:Name="tabControl" Grid.Row="1" Grid.Column="1">
                 <TabItem Header="X-Ray">
-                    <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Border BorderBrush="Black" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <ScrollViewer Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
                         ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"
                         x:Name="ImageViewer">
@@ -244,6 +244,7 @@
                     HorizontalAlignment="Left"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto"
+                         KeyDown="OnTxtFileTitleKeyDown"
                     >
                 </TextBox>
                 <!--Text="{Binding UserFileMemo, UpdateSourceTrigger=PropertyChanged}"-->
