--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -59,7 +59,8 @@
                 <!-- Image Template -->
                 <Border Padding="2" Background="White" BorderBrush="#22000000" BorderThickness="1">
                     <StackPanel Orientation="Vertical">
-                        <Image Source="{Binding Image.Thumbnail}"/>
+                        <!--<Image Source="{Binding Image.Thumbnail}"/>-->
+                        <Image Source="{Binding Image}"/>
                         <Label Content="{Binding Metadata.DateImageTaken}">
                             <Label.ToolTip>
                                 JPeg , Png 이미지만 미리보기가 가능합니다.
@@ -104,6 +105,7 @@
             </Setter>
         </Style>
 
+
         <ObjectDataProvider x:Key="Photos" ObjectType="{x:Type er:PhotoCollection}" />
     </Window.Resources>
 
@@ -119,13 +121,6 @@
 
 
             <Menu IsMainMenu="True" VerticalAlignment="Top" Grid.Row="0">
-            <!--ItemsSource="{Binding TopMenuItems}"-->
-            <!--<Menu.ItemContainerStyle>
-                <Style TargetType="{x:Type MenuItem}">
-                    <Setter Property="Header" Value="{Binding Title}"/>
-                    <Setter Property="ItemsSource" Value="{Binding Path=ChildMenuItems}"/>
-                </Style>
-            </Menu.ItemContainerStyle>-->
                 <MenuItem Header="소견">
                     <MenuItem Header="불러오기" Name="btnLoadText" Click="btnLoadText_Click"/>
                     <MenuItem Header="저장" Name="btnSaveDBText" Click="btnSaveDBText_Click"/>
@@ -136,7 +131,6 @@
                         <!--<MenuItem Header="File1"/>-->
                     </MenuItem>
                 </MenuItem>
-
             </Menu>
 
         <Grid Margin="0" Grid.Row="1">
@@ -155,7 +149,7 @@
                 <GroupBox Grid.Column="0" Grid.Row="1" Width="200">
                     <TabControl x:Name="tabLeft" Grid.Row="1" Grid.Column="0">
                         <TabItem Header="썸네일">
-                            <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Width="200">
+                            <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Width="180">
                                 <ListBox DataContext="{Binding Source={StaticResource Photos}}"
                                     IsSynchronizedWithCurrentItem="True"
                                     Name="PhotosListBox" 
@@ -164,11 +158,14 @@
                                     ItemsSource="{Binding}" 
                                     SelectedIndex="0" 
                                     MouseDoubleClick="OnPhotoDblClick" Width="180" >
-                                    <ListBox.ContextMenu>
+                                    <!--<StackPanel Orientation="Vertical">
+                                        <Image Source="{Binding}"/>
+                                    </StackPanel>-->
+                                    <!--<ListBox.ContextMenu>
                                         <ContextMenu>
-                                            <!--<MenuItem Header="삭제" Click="deletePhoto"/>-->
+                                            --><!--<MenuItem Header="삭제" Click="deletePhoto"/>--><!--
                                         </ContextMenu>
-                                    </ListBox.ContextMenu>
+                                    </ListBox.ContextMenu>-->
                                 </ListBox>
                             </ScrollViewer>
                         </TabItem>
@@ -204,15 +201,17 @@
             <!--X-ray-->
             <TabControl x:Name="tabControl" Grid.Row="1" Grid.Column="1">
                 <TabItem Header="X-Ray">
-                    <Border BorderBrush="Black" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Border BorderThickness="0" MaxWidth="4892" MaxHeight="4020" >
                         <ScrollViewer Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
-                        ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                        x:Name="ImageViewer">
+                        ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Visible"
+                        x:Name="ImageScrollViewer" >
                             <Grid x:Name="root" Background="White" >
-                                <Canvas Name="Xcanvas" Width="1500" Height="960"  >
-                                    <Image Name="ViewedPhoto" Width="1223" Height="1005" Margin="1" Stretch="UniformToFill"  >
-                                        <Image.RenderTransform>
+                                    <Canvas Name="Xcanvas" Width="1500" Height="900" >
+                                        <Image Name="ViewedPhoto" Width="1500" Height="900" Margin="1" Stretch="UniformToFill" 
+                                               ><!--Loaded="ViewedPhoto_OnLoaded"-->
+                                            <Image.RenderTransform>
                                             <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
+                                                
                                             </ScaleTransform>
                                         </Image.RenderTransform>
                                     </Image>
@@ -226,27 +225,44 @@
 
             <!-- 의사 소견 -->
             <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="2" Grid.Row="1">
-                <!-- 컷팅 메모 -->
-                <TextBox Name="TxtcutMemo" x:FieldModifier="public"
-                     Text="{Binding XrayTEXT.ViewModels.MainViewModel.UserCutMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     Width="200" MinHeight="600" Margin="1,0" 
-                     VerticalAlignment="Top"
-                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                     ScrollViewer.VerticalScrollBarVisibility="Auto"
-                     >
-                </TextBox>
-                <!---->
+                    <Grid Margin="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="22" />
+                            <RowDefinition Height="30" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="30" />
+                            <RowDefinition Height="120" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        
+                        <Label Name="LblcutMemo" Grid.Column="0" Grid.Row="1">소견</Label>
+
+                        <!-- 컷팅 메모 -->
+                        <TextBox Name="TxtcutMemo" Grid.Column="0" Grid.Row="2" x:FieldModifier="public"
+                         Text="{Binding XrayTEXT.ViewModels.MainViewModel.UserCutMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         Width="200" MinHeight="600" Margin="1,0" 
+                         VerticalAlignment="Top"
+                         ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                         ScrollViewer.VerticalScrollBarVisibility="Auto"
+                         >
+                        </TextBox>
+                        <Label Name="LblFileTitle" Grid.Column="0" Grid.Row="3">설명</Label>
+
+                        <TextBox Name="TxtFileTitle" Grid.Column="0" Grid.Row="4" x:FieldModifier="public"
+                            Text="{Binding XrayTEXT.ViewModels.MainViewModel.UserFileMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            Width="190" Height="120" Margin="1,0" 
+                            VerticalAlignment="Bottom"
+                            HorizontalAlignment="Left"
+                            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                            ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                 KeyDown="OnTxtFileTitleKeyDown"
+                        >
+                        </TextBox>
+                    </Grid>
+                
             <!-- 사진 파일 설명 -->
-                <TextBox Name="TxtFileTitle" x:FieldModifier="public"
-                    Text="{Binding XrayTEXT.ViewModels.MainViewModel.UserFileMemo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Width="190" Height="120" Margin="-190,0" 
-                    VerticalAlignment="Bottom"
-                    HorizontalAlignment="Left"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto"
-                         KeyDown="OnTxtFileTitleKeyDown"
-                    >
-                </TextBox>
                 <!--Text="{Binding UserFileMemo, UpdateSourceTrigger=PropertyChanged}"-->
 
                     <TextBox Name="TxtServerTime" x:FieldModifier="public"
@@ -256,6 +272,7 @@
 	                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
 	                    ScrollViewer.VerticalScrollBarVisibility="Auto"
 	                    ></TextBox>
+                
                     <TextBox Name="TxtLayUICnt" x:FieldModifier="public"
 	                    Width="40" Height="20" Margin="-100,-30" 
 	                    VerticalAlignment="Bottom"
@@ -279,13 +296,20 @@ Grid.Row="2" Grid.Column="1"
 Click="GetTalkBoxEnable"
 HorizontalAlignment="Left"
 Margin="285,0,0,0"
->체크
-                </Button>-->
-                <!-- 이미지경로 -->
-            <TextBox Name="ImagesDir" Margin="0,0,120,10" Width="450" Grid.Row="2" Grid.Column="1" Text="D:\DEV\WPF\PRJ\XrayTEXT\XrayTEXT\Images"  HorizontalAlignment="Left" />
-            <!-- 이미지경로 변경 버튼 -->
-            <Button Grid.Row="2" Grid.Column="1"  Margin="20,0,0,0" Width="80" Click="OnImagesDirChangeClick" HorizontalAlignment="Right">폴더변경</Button>
-        </Grid>
+>체크</Button>-->
+                <DockPanel DockPanel.Dock="Bottom" Margin="5" Width="500" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
+                    <!-- 이미지경로 -->
+                    <TextBox Name="ImagesDir" Margin="0,0,0,0" Width="400" Text="D:\DEV\WPF\PRJ\XrayTEXT\XrayTEXT\Images"  HorizontalAlignment="Right" />
+                    <!-- 이미지경로 변경 버튼 -->
+                    <Button Margin="20,0,0,0" Width="80" Click="OnImagesDirChangeClick" HorizontalAlignment="Right">폴더변경</Button>
+                </DockPanel>
+
+                <!--<DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right">
+                    <Label DockPanel.Dock="Left" FontSize="12">Zoom:</Label>
+                    <Slider Name="ZoomImage" Margin="10,0,0,0"  Orientation="Horizontal" Minimum="80"  Maximum="180" Value="120"  TickFrequency="80"
+                        TickPlacement="BottomRight" SmallChange="5" LargeChange="20" Width="110" FontSize="12" />
+                </DockPanel>-->
+            </Grid>
         </Grid>
     </DockPanel>
 
