--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -46,7 +46,7 @@
 
         <!-- Photo Template -->
         <DataTemplate DataType="{x:Type er:Photo}">
-            <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Margin="6">
+            <Grid VerticalAlignment="Top" HorizontalAlignment="Center" Margin="6">
                 <!-- Drop Shadow -->
                 <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" CornerRadius="4" Background="#44000000">
                     <Border.RenderTransform>
@@ -59,13 +59,8 @@
                 <!-- Image Template -->
                 <Border Padding="2" Background="White" BorderBrush="#22000000" BorderThickness="1">
                     <StackPanel Orientation="Vertical">
-                        <!--<Image Source="{Binding Image.Thumbnail}"/>-->
-                        <Image Source="{Binding Image}"/>
-                        <Label Content="{Binding Metadata.DateImageTaken}">
-                            <Label.ToolTip>
-                                JPeg , Png 이미지만 미리보기가 가능합니다.
-                            </Label.ToolTip>
-                        </Label>
+                        <Image Source="{Binding Image}" Height="70" />
+                        <Label Content="{Binding OnlyFileName}" ToolTip="{Binding Image.UriSource}" Height="30" FontSize="11" ></Label>
                     </StackPanel>
                 </Border>
             </Grid>
@@ -77,7 +72,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListBox}" >
-                        <WrapPanel Margin="5" IsItemsHost="True" Orientation="Horizontal" 
+                        <WrapPanel Margin="3" IsItemsHost="True" Orientation="Horizontal" 
                        ItemHeight="{Binding ElementName=ZoomSlider, Path='Value'}" 
                        ItemWidth="{Binding ElementName=ZoomSlider, Path='Value'}" 
                        VerticalAlignment="Top" HorizontalAlignment="Stretch" />
